--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,7 +78,9 @@ main {
 
 .box1-container {
   width: 100%;
-  height: 50vh;
+  min-height: 10vh;
+  max-height: 50vh;
+  /* height: 50vh; */
   margin: 10px auto;
   background-color: white;
   padding: 20px;
@@ -102,6 +104,7 @@ main {
 textarea {
   width: 100%;
   height: 100%;
+  max-height: 45vh;
   padding: 10px;
   box-sizing: border-box;
   resize: none;
@@ -158,6 +161,15 @@ p {
 #submitbtn:focus {
   border: none;
 }
+
+
+/* .actionbtn {
+  position: fixed;
+  bottom: 25px;
+  right: 25px;
+} */
+
+
 
 /* Chrome, Edge and Safari */
 *::-webkit-scrollbar {
@@ -268,11 +280,6 @@ p {
   box-shadow: none;
 }
 
-.actionbtn {
-  position: fixed;
-  bottom: 25px;
-  right: 25px;
-}
 
 
 .accordion-button:not(.collapsed) {
