--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,5 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Bungee+Spice&family=Leckerli+One&family=PT+Mono&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
@@ -76,72 +78,77 @@ main {
   }
 }
 
+
+.parent-container {
+  border: none;
+  background: none;
+  scroll-behavior: smooth;
+}
+
+
+.grid {
+  display: grid;
+  grid-template-columns: 1fr 100% 1fr;
+  /* gap: 10px; */
+  justify-items: center;
+  align-items: center;
+  /* column-gap: 20px; */
+  margin: 0 auto;
+}
+
+
 .box1-container {
   width: 100%;
   min-height: 10vh;
-  max-height: 50vh;
+  max-height: 55vh;
   /* height: 50vh; */
+  border-radius: .3em;
   margin: 10px auto;
   background-color: white;
   padding: 20px;
-  border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   position: relative;
+  /* margin-right: auto; */
+  grid-column: 2;
 }
+
 
 .box2-container {
   width: 100%;
-  margin: 30px auto;
+  /* margin: 30px auto; */
   background-color: white;
   padding: 20px;
-  border-radius: 8px;
+  grid-column: 2;
 }
 
 .box2-container p {
   color: grey;
 }
 
+
 textarea {
   width: 100%;
+  max-width: 100%;
   height: 100%;
-  max-height: 45vh;
+  max-height: 50vh;
   padding: 10px;
-  box-sizing: border-box;
   resize: none;
   outline: none;
-  font-size: medium;
-  border: 1px solid;
-  border-color: transparent transparent lightgrey transparent;
-}
-
-p {
-  margin-top: 10px;
-  font-size: small;
-  line-height: 2;
-}
-
-.alert-container {
-  position: absolute;
-  top: 10%;
-  left: 68%;
-}
-
-
-.toolbar {
-  margin: 0 auto;
-  width: fit-content;
-  background-color: white;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
-.classifications {
   border: none;
-  outline: none;
-  width: 100%;
-  height: 100%;
+  font-size: medium;
+  padding-bottom: 0;
+  transition: max-width 1s ease;
 }
 
-#submitbtn {
+
+#alert-container {
+  position: absolute;
+  top: 7%;
+  right: 1%;
+}
+
+
+button[type="submit"] {
   background-color: #0b5394;
   color: #fff;
   padding: 7px 10px;
@@ -150,26 +157,135 @@ p {
   border-radius: 4px;
   font-size: 16px;
   max-width: 7em;
+  opacity: 1;
   transition: color 0.7s ease, background-color 0.2s ease;
 }
 
-#submitbtn:hover {
+button[type="submit"]:hover {
   background-color: rgb(255, 255, 255);
   color: #0b5394;
 }
 
-#submitbtn:focus {
+button[type="submit"]:focus {
   border: none;
 }
 
 
-/* .actionbtn {
+.actionbtn1 {
+  grid-column: 3;
+  justify-self: start;
+  margin-left: 20px;
+  height: 100%;
+  padding: 50% 10px;
+  display: block;
+}
+
+.actionbtn1 > button {
+  height: 100%;
+}
+
+.actionbtn2 {
   position: fixed;
-  bottom: 25px;
-  right: 25px;
-} */
+  bottom: 2rem;
+  right: 2rem;
+  z-index: 1000;
+  display: none;
+  border-radius: 4px;
+  /* padding: 3px; */
+  background: none;
+  box-shadow: 0px 0px 7px 0px white;
+}
+
+.actionbtn2 > button {
+  opacity: 0;
+  mix-blend-mode: difference;
+}
+
+@media screen and (max-width: 1300px) {
+  .actionbtn1 {
+    display: none;
+  }
+
+  .actionbtn2 {
+    display: block;
+  }
+
+  .actionbtn2 > button {
+    opacity: 1;
+  }
+}
 
 
+.clearbtn > button[type="button"] {
+  background-color: #f7f7f7;
+  color: grey;
+  /* padding: 7px 10px; */
+  cursor: pointer;
+  border: none;
+  font-size: 16px;
+  max-width: 7em;
+  border-radius: 10%;
+  transition: color 0.3s ease, background-color 0.2s ease;
+}
+
+.clearbtn > button[type="button"]:hover {
+  background-color: #eeeeee;
+  color: #eeeeee;
+}
+
+.clearbtn > button[type="button"]:focus {
+  border: none;
+}
+
+.clearbtn {
+  opacity: 0;
+  transition: opacity 1s ease
+}
+
+.headingsim {
+  font-family: "Leckerli One", cursive !important;
+  font-size: medium;
+  color:#0b5394;
+  margin-bottom: 20px;
+  opacity: 0;
+  display: none;
+  transition: opacity 1s ease;
+}
+
+
+.headingsim > div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.headingsim button {
+  display: flex;
+  align-items: center;
+  border: none;
+  background: none;
+}
+
+.headingsim #collapse-all {
+  color: #0b5394;
+  transition: transform 0.5s ease;
+  transform-origin: center center;
+}
+
+.rotate {
+  transform: rotate(180deg);
+}
+
+
+.clco {
+  display: flex;
+  align-items: center;
+  column-gap: 1em;
+}
+
+.domvisible {
+  opacity: 1;
+}
 
 /* Chrome, Edge and Safari */
 *::-webkit-scrollbar {
@@ -178,7 +294,7 @@ p {
 }
 *::-webkit-scrollbar-track {
   border-radius: 0px;
-  background-color: #dfe9eb;
+  background-color: #fff;
   border: 10px dotted #ffffff;
 }
 
@@ -207,10 +323,11 @@ p {
 #loader_container {
   position: absolute;
   width: 100%;
-  bottom: 13.5px;
+  bottom: -6.5px;
   left: 0;
   margin: 0;
   padding: 0 20px;
+  grid-column: 2;
 }
 
 .loader {
@@ -247,8 +364,8 @@ p {
 
 #output {
   position: absolute;
-  bottom: 30px;
-  right: 45px;
+  bottom: 1%;
+  right: 1%;
   /* transform: translate(50%, 50%); */
 }
 
@@ -270,8 +387,11 @@ p {
   height: fit-content;
   border-radius: 7px;
 }
-
-.accordion-button:hover {
+.accordion-button::after {
+  background-color: white;
+  border-radius: 2px;
+}
+.accordion-button:hover  {
   color: white;
   background-color: #0b5394;
 }
@@ -281,10 +401,13 @@ p {
 }
 
 
+.accordion-button {
+  border-radius: 4px !important;
+}
 
 .accordion-button:not(.collapsed) {
   color: #fcfcfc;
-  background-color: #0b5394;
+  background-color: #0b5494;
 }
 
 .accordion-button:not(.collapsed):hover {
