--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Login | dbtranslate</title>
+    <title>Login | Filmfavor</title>
     <link rel="stylesheet" href="{% static 'css/form.css' %}" />
     <script src="https://accounts.google.com/gsi/client" async></script>
     <script>
@@ -29,7 +29,6 @@
       <img src="{% static 'imgs/logo1.svg' %}" alt="">
       <div class="lwrapper">
         <img src="{% static 'imgs/logo.svg' %}" alt="">
-        <!-- <div class="title">Translate</div> -->
         <div class="gbutton" id="gbutton">
           <div
             id="g_id_onload"
