--- a/templates/users/login.html
+++ b/templates/users/login.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Login | Filmfavor</title>
+    <link rel="icon" type="image/x-icon" href="{% static 'imgs/favicon.png' %}">
     <link rel="stylesheet" href="{% static 'css/form.css' %}" />
     <script src="https://accounts.google.com/gsi/client" async></script>
     <script>
